add integration tests and ensurethey run inside the test container