@@ -1,10 +1,9 @@
-package org.swisscom.serviceapp.mapper;
+package org.swisscom.serviceapp.infrastructure.mapper;
 
-import org.swisscom.serviceapp.model.AppService;
-import org.swisscom.serviceapp.model.dto.AppServiceDTO;
+import org.swisscom.serviceapp.domain.model.AppService;
+import org.swisscom.serviceapp.infrastructure.dto.AppServiceDTO;
 
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 public class ServiceMapper {
 
@@ -26,14 +25,14 @@ public class ServiceMapper {
 
         appService.setId(UUID.randomUUID());
 
-        appService.setResources(appServiceDTO.getResources().stream().map(ResourceMapper::toEntity).collect(Collectors.toList()));
+        appService.setResources(appServiceDTO.getResources().stream().map(ResourceMapper::toEntity).toList());
 
         return appService;
     }
 
     public static AppService toEntityForUpdate(AppService service, AppServiceDTO appServiceDTO) {
 
-        service.setResources(appServiceDTO.getResources().stream().map(ResourceMapper::toEntity).collect(Collectors.toList()));
+        service.setResources(appServiceDTO.getResources().stream().map(ResourceMapper::toEntity).toList());
 
         return service;
     }
